--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "firebase": "^11.0.0",
     "node-telegram-bot-api": "^0.61.0",
-    "web3": "1.10.4"
+    "web3": "1.10.4",
+    "dotenv": "^16.4.0"
   },
   "keywords": ["telegram", "web3", "polygon", "bot"],
   "author": "Your Name",
