--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^11.0.0",
     "node-telegram-bot-api": "^0.61.0",
     "web3": "1.10.4",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "node-cron": "^3.0.3",
+    "twitter-api-v2": "^1.15.0"
   },
   "keywords": ["telegram", "web3", "polygon", "bot"],
   "author": "Your Name",
